--- a/Relogio_1/nbproject/private/private.properties
+++ b/Relogio_1/nbproject/private/private.properties
@@ -1,2 +1,4 @@
+#Fri May 19 12:27:52 BRT 2017
+javadoc.preview=true
 compile.on.save=true
 user.properties.file=C:\\Users\\Maicon Moretto\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
